# CosmoWAP

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE.txt  README.md  _config.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: test.yml
Examples/: example.ipynb  example_pk.ipynb
conda-recipe/: README.md  meta.yaml
conda-recipe/chainconsumer/: meta.yaml
conda-recipe/classy/: meta.yaml
core_papers/: README.md
cosmo-wap/: PBS_bias.py  cosmo_funcs.py  survey_params.py
docs/: per_bin_fisher_implementation_overview.md  requirements.txt
docs/source/: bfb.rst  biasmodel.rst  bk.rst  classwap.rst  conf.py  cosmo_wap.bk.rst  covariance.rst  forecast.rst  getting_started.rst  index.rst  install.rst  integrated.rst  luminosityfuncs.rst  pk.rst  snr.rst  surveyparams.rst
docs/source/Legacy/: bk.rst
docs/source/_templates/: layout.html
examples/: PNG_bias_play.ipynb  binder_example.ipynb  classy_dict.pkl  example.ipynb  example_biases.ipynb  example_bk.ipynb  example_pk.ipynb
examples/.ipynb_checkpoints/: PNG_bias_play-checkpoint.ipynb  binder_example-checkpoint.ipynb  example-checkpoint.ipynb  example_biases-checkpoint.ipynb  example_bk-checkpoint.ipynb  example_pk-checkpoint.ipynb
examples/binder/: binder_example.ipynb  requirements.txt
notebooks/: Untitled.ipynb  bk_PNG.ipynb  bk_SNR.ipynb  integrand.ipynb  pk_integrated.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  bk_PNG-checkpoint.ipynb  bk_SNR-Copy1-checkpoint.ipynb  bk_SNR-checkpoint.ipynb  pk_integrated-checkpoint.ipynb
papers/: README.md
src/CosmoWAP.egg-info/: PKG-INFO  SOURCES.txt
src/cosmo_wap/: __init__.py  class_wap.py  forecast.py  forecast2.py  integrate.py  integrated.py  main.py  peak_background_bias-Copy1.py  peak_background_bias.py  survey_params.py  useful_funcs.py  utils.py
src/cosmo_wap/.ipynb_checkpoints/: survey_params-checkpoint.py
src/cosmo_wap/HOD/: AbacusSummit_base_c000_ph000_best_params.txt  README.md  __init__.py  hmf.py  hods.py  peak_background_bias.py
src/cosmo_wap/bk/: GR0.py  GR1.py  GR2.py  GR_0.py  GR_1.py  GR_2.py  PNG.py  PNG_.py  RR1.py  RR_1.py  WA1.py  WA2.py  WARR.py  WA_1.py  WA_2.py  WSGR.py  __init__.py  bk_int.py  c_compile.py  combined.py  combined2.py  cov.py  cov2.py  cse_convert.py
src/cosmo_wap/bk_mt/: GR0.py  GR1.py  GR2.py  PNG.py  __init__.py  combined.py
src/cosmo_wap/bk_terms/: GR1.py  GR2.py  RR1.py  WA2.py
src/cosmo_wap/data_library/: SKAO1Data.txt
src/cosmo_wap/forecast/: __init__.py  base_posterior.py  core.py  covariances.py  fisher.py  fisher_list.py  forecast.py  mpi_mcmc.py  posterior.py  sampler.py
src/cosmo_wap/lib/: SAM.py  __init__.py  angular_integrate.py  betas.py  bk_plots.py  fisher_core.py  integrate.py  integrated.py  kernels.py  lf_priors.py  lumfunc_priors.py  luminosity_funcs.py  unpack.py  utils.py
src/cosmo_wap/numeric_mu/: __init__.py  bk_int.py  integration.py  kernels.py  pk.py  utils.py
src/cosmo_wap/pk/: IxS_components.py  PNG.py  Pk_0.py  Pk_WS.py  Pk_WSGR.py  __init__.py  combined.py  combined2.py  cov.py  covRR.py  covWS.py  covWSGR.py  int.py  int_components.py  pk_int.py
src/cosmo_wap/pk/.ipynb_checkpoints/: int-checkpoint.py
src/cosmowap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test-cosmowap.py  test_bk_multipoles.py  test_compute_bias.py  test_fisher.py  test_forecast.py  test_luminosity_funcs.py  test_pk_multipoles.py  test_sampler.py  test_survey_params.py  test_utils.py
