[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmowap"
version = "0.5.1"
authors = [
  { name="Chris Addis", email="c.l.j.addis@qmul.ac.uk" },
]
description = "package for computing power spectra and bispectra"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# List of dependencies required for the project to run
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "cython",
    "classy",
    "chainconsumer",
    "cobaya"
]

[project.urls]
homepage = "https://github.com/craddis1/CosmoWAP"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"cosmo_wap" = ["data_library/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
