[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmowap"
version = "0.6.1"
authors = [
  { name="Chris Addis", email="c.l.j.addis@qmul.ac.uk" },
]
description = "package for computing power spectra and bispectra"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# List of dependencies required for the project to run
dependencies = [
    "numpy",
    "scipy >= 1.15.0",
    "matplotlib",
    "tqdm",
    "cython",
    "classy < 3.3.2.0",
    "chainconsumer",
    "cobaya"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.urls]
homepage = "https://github.com/craddis1/CosmoWAP"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"cosmo_wap" = ["data_library/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"src/cosmo_wap/bk/*" = ["F401", "F841"]
"src/cosmo_wap/pk/*" = ["F401", "F841"]
"src/cosmo_wap/bk_mt/*" = ["F401", "F841"]
