[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmowap"
version = "0.6.1"
authors = [
  { name="Chris Addis", email="c.l.j.addis@qmul.ac.uk" },
]
description = "package for computing power spectra and bispectra"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# List of dependencies required for the project to run
dependencies = [
    "numpy",
    "scipy >= 1.15.0",
    "matplotlib",
    "tqdm",
    "cython",
    "classy < 3.3.2.0",
    "chainconsumer",
    "cobaya"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.urls]
homepage = "https://github.com/craddis1/CosmoWAP"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"cosmo_wap" = ["data_library/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "src/cosmo_wap/bk/",
    "src/cosmo_wap/pk/",
    "src/cosmo_wap/bk_mt/",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = [
    "E501", # line too long (formatter doesn't wrap comments/docstrings)
    "W291", # trailing whitespace (formatter doesn't fix inside docstrings)
    "W293", # blank line whitespace (formatter doesn't fix inside docstrings)
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "E731", # do not assign a lambda expression
    "E743", # ambiguous function name
    "F403", # from module import *
    "F405", # name may be undefined, or defined from star imports
    "F821", # undefined name (ignoring for now as requested)
    "E711", # comparison to None
    "E712", # comparison to True/False
    "E721", # type comparison
    "E701", # multiple statements on one line (colon)
    "E702", # multiple statements on one line (semicolon)
    "F841", # local variable is assigned to but never used
]

